fixed button text off centre

--- a/content/external/Floss/css/main.css
+++ b/content/external/Floss/css/main.css
@@ -136,6 +136,7 @@ button {
 
   color: #181818;
   text-shadow: 2px 2px 4px #fc6e94;
+  padding: 0%;
 }
 
 
